-
    Bug fixed: Loading a saved draft followup that didn't have an
    action would raise an error.
    
    Bug fixed: Loading filter options in Konquerer would load the AJAX
    request 3 times for one click.
    
    Bug fixed: Saved filters container was never imploded even if the 
    container had more saved filters in it than allowed.
    
    Bug fixed: Saving filters when only the fromname is known would
    raise an UnmatchableError.
    
- 0.9.1

    Bug fixed: Saved cookies with where only the name is known could
    cause an error on the /User page.

    Bug fixed: Delete issue form did not work.
    
- 0.9.0

    New feature: If you pass the spambot prevention test it's
    remembered in a cookie for the next 60 days rather than just for
    the session.
    
    New feature: When you've added an issue the URL it redirects to no
    longer ends with ?NewIssues=Submitted. Cleaner URLs.

    New feature: Really long URLs in the text that extend beyond the
    box it's in is truncated shorter.

    Bug fixed: Having statuses containing unicode characters could
    break the statistics page. Thanks Rene Bonvin. (Real#0735)

    New feature: Basic statistics is not private by default from now
    on. You can still make it private from the Advanced Properties page.
    
    New feature: Statuses can now be configured to contain unicode
    characters. 
    
    New feature: The persistent list of saved filters is now indexed
    with a separate ZCatalog to vastly speed up lookups of old saved
    filters.
    
    Bug fixed: Saved filters containing unicode characters could cause
    a UnicodeDecodeError.    

    Bug fixed: Unicode characters in a filtered name would show
    incorrectly when loading the filter options.

    Bug fixed: Search on title with wildcards (e.g. *keyword* matching
    'subkeywords') only if no other title searches matched.

    Bug fixed: Emails with tabs in header values were before